--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 # NOTE: setup.py contains the packages installed with setup.py install
-Django<4
+Django==5.2.5
 gnupg==2.3.1
-gunicorn>=20.1.0
+gunicorn==23.0.0
